# Networkmonitor-windows

./: Cargo.toml  README.md
src/: alerts.rs  app.rs  collector.rs  config.rs  conn_collector.rs  connections.rs  main.rs  processes.rs  spy_collector.rs
src/ui/: connections.rs  interfaces.rs  mod.rs  processes.rs  spy.rs
